; ModuleID = '/home/carl/AnghaBench/linux/tools/build/feature/extr_test-disassembler-four-args.c_main_test_disassembler_four_args.c'
source_filename = "/home/carl/AnghaBench/linux/tools/build/feature/extr_test-disassembler-four-args.c_main_test_disassembler_four_args.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  store i32 0, i32* %1, align 4
  %3 = call i32* @bfd_openr(i32* null, i32* null)
  store i32* %3, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @bfd_get_arch(i32* %4)
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @bfd_big_endian(i32* %6)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @bfd_get_mach(i32* %8)
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @disassembler(i32 %5, i32 %7, i32 %9, i32* %10)
  ret i32 0
}

declare dso_local i32* @bfd_openr(i32*, i32*) #1

declare dso_local i32 @disassembler(i32, i32, i32, i32*) #1

declare dso_local i32 @bfd_get_arch(i32*) #1

declare dso_local i32 @bfd_big_endian(i32*) #1

declare dso_local i32 @bfd_get_mach(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
